# RustReferences

./: README.md
Microservice1/: Cargo.toml  Rocket.toml
Microservice1/src/: main.rs
Microservice1/src/models/: mod.rs  player.rs
Microservice1/src/models/dto/: meta_result.rs  mod.rs
Microservice1/src/routes/: mod.rs
Microservice1/src/tests/: mod.rs
